# html2mkdwn

./: Dockerfile  LICENSE  README.md  Readme.md  pyproject.toml
.github/workflows/: docker-image.yml  pylint.yml
html2mkdwn/: main.py
